@@ -20,7 +20,7 @@ X-Plasma-RemoteLocation=
 X-KDE-PluginInfo-Author=Evgeniy Alekseev aka arcanis
 X-KDE-PluginInfo-Email=esalexeev@gmail.com
 X-KDE-PluginInfo-Name=org.kde.plasma.desktoppanel
-X-KDE-PluginInfo-Version=2.2.2
+X-KDE-PluginInfo-Version=2.3.0
 X-KDE-PluginInfo-Website=http://arcanis.name/projects/awesome-widgets/
 X-KDE-PluginInfo-Category=System Information
 X-KDE-PluginInfo-Depends=
